objects/Config__c/Config__c.object-meta.xml
<CustomObject>
    <label>Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>