objects/Config__c/fields/Background_Colour__c.field-meta.xml
<CustomField>
    <fullName>Background_Colour__c</fullName>
    <label>Background Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>