objects/Config__c/fields/Footer_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Footer_Line_1__c</fullName>
    <label>Footer Line 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>