objects/Config__c/fields/Footer_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Footer_Line_2__c</fullName>
    <label>Footer Line 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>