objects/Config__c/fields/Header_Title__c.field-meta.xml
<CustomField>
    <fullName>Header_Title__c</fullName>
    <label>Header Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>