objects/Config__c/fields/Invoice_Background__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Background__c</fullName>
    <label>Invoice Background</label>
    <length>30</length>
    <type>Text</type>
</CustomField>