objects/Config__c/fields/Product_Table_Colour__c.field-meta.xml
<CustomField>
    <fullName>Product_Table_Colour__c</fullName>
    <label>Product Table Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>